--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* 
 .movie_div{
     display: flex;
     padding: 20px;
@@ -53,4 +53,119 @@
 #pagination a.active {
     background-color: #007bff;
     color: #fff;
+} */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+    margin: 0;
+    padding: 0;
+}
+
+/* Header styling */
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #007BFF;
+    padding: 10px;
+}
+
+h2 {
+    color: #fff;
+    margin-right: 30px;
+}
+
+form {
+    display: flex;
+    align-items: center;
+    margin: 0;
+}
+
+label {
+    color: #333;
+    margin-right: 5px;
+}
+
+input[type="text"] {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+input[type="submit"] {
+    padding: 5px 10px;
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+/* Movie List and Movie Item styling */
+.movielist {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.movie_div {
+    /* width: 200px; */
+    margin-bottom: 20px;
+    /* margin: 10px; */
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    /* overflow: hidden; */
+}
+
+.image {
+    width: 100%;
+    height: auto;
+    border-radius: 8px 8px 0 0;
+}
+
+.sidediv {
+    padding: 10px;
+}
+
+.movietitle {
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+    margin: 0;
+}
+
+.year, .type {
+    font-size: 14px;
+    color: #666;
+    margin: 5px 0;
+}
+
+.details {
+    padding: 5px 10px;
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    outline: none;
+}
+
+/* Pagination styling */
+#pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+a {
+    display: inline-block;
+    margin: 0 5px;
+    color: #007BFF;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
